fix: Header item stretch

--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -58,7 +58,7 @@
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: stretch;
 	justify-content: center;
 }
 
